postgres-macros/tests/fail/missing_variable.rs
fn main() {
    sqlm_postgres_macros::sql_unchecked!("{id}");
}
